// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bulma component generator  should create a basic bulma component 1`] = `
<div
  class="box"
/>
`;

exports[`Bulma component generator  should create a basic bulma component with modifiers 1`] = `
<div
  class="box is-primary"
  is-primary=""
/>
`;

exports[`Bulma component generator  should create a basic bulma component with modifiers binded to false 1`] = `
<div
  class="box"
/>
`;

exports[`Bulma component generator  should create a empty div w/ no class 1`] = `
<div
  class=""
/>
`;
